# api/app/oas/oas_router_gen.go
@@ -60,6 +60,27 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				break
 			}
 			switch elem[0] {
+			case 'm': // Prefix: "market"
+				origElem := elem
+				if l := len("market"); len(elem) >= l && elem[0:l] == "market" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch r.Method {
+					case "GET":
+						s.handleMarketGetRequest([0]string{}, elemIsEscaped, w, r)
+					default:
+						s.notAllowed(w, r, "GET")
+					}
+
+					return
+				}
+
+				elem = origElem
 			case 's': // Prefix: "sign-up"
 				origElem := elem
 				if l := len("sign-up"); len(elem) >= l && elem[0:l] == "sign-up" {
@@ -197,6 +218,31 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 				break
 			}
 			switch elem[0] {
+			case 'm': // Prefix: "market"
+				origElem := elem
+				if l := len("market"); len(elem) >= l && elem[0:l] == "market" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch method {
+					case "GET":
+						r.name = "MarketGet"
+						r.summary = ""
+						r.operationID = ""
+						r.pathPattern = "/market"
+						r.args = args
+						r.count = 0
+						return r, true
+					default:
+						return
+					}
+				}
+
+				elem = origElem
 			case 's': // Prefix: "sign-up"
 				origElem := elem
 				if l := len("sign-up"); len(elem) >= l && elem[0:l] == "sign-up" {
