# api/docs/openapi.yaml
@@ -29,6 +29,36 @@ paths:
         "500":
           $ref: "#/components/responses/500InternalServerError"
 
+  /market:
+    get:
+      parameters:
+        - $ref: "#/components/parameters/Authorization"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                      example: 1
+                    name:
+                      type: string
+                      example: "market_name"
+                    description:
+                      type: string
+                      example: "market_description"
+                  required:
+                    - id
+                    - name
+                    - description
+        "500":
+          $ref: "#/components/responses/500InternalServerError"
+
 components:
   parameters:
     Authorization:
